--- a/contact.html
+++ b/contact.html
@@ -5,11 +5,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <!-- Remember to link to your CSS file! -->
+    <link rel="stylesheet" href="assets/css/style.css" type="text/css">
 </head>
 <body>
     <!-- CONTACT PAGE -->
     <!-- TODO: Navbar here -->
+    <div>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="contact.html">Contact Us</a></li>
+                <li><a href="menu.html">Menu</a></li>
+            </ul>
+        </nav>
+    </div>
     <!-- TODO: Banner Image here-->
+    <img
+    id="table"
+    src="assets/images/table-in-restaurant.jpg"
+    alt="table-image"
+>
     <main>
         <h2>Hours of Operation</h2>
         <p>
@@ -20,7 +36,9 @@
         </p>
         <h2>Contact Info</h2>
         <p>
-            <strong>Phone Number:</strong> TBD
+            <strong>Phone Number:</strong> 123-456-7896
+            <strong>Email:</strong> thaifood@thaifood.com
+            <strong>Address:</strong> 123 West Ave, New York City, NY 01122
         </p>
     </main>
 </body>
