--- a/index.html
+++ b/index.html
@@ -9,10 +9,47 @@
 <body>
     <!-- HOME PAGE -->
     <!-- TODO: Navbar here -->
+    <div>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="contact.html">Contact Us</a></li>
+                <li><a href="menu.html">Menu</a></li>
+            </ul>
+        </nav>
+    </div>
     <!-- TODO: Banner Image here-->
+    <img
+        id="banner"
+        src="assets/images/banner.png"
+        alt="banner-image"
+    >
     <main>
         <h1>H-Thai-ML</h1>
         <!-- TODO: Home page code here-->
+        <p>
+            Hello and Welcome to Our Homepage
+            Here you will find alot about our Thai Restaurant
+            Thanks for visiting and we hope you enjoy and come again
+
+        </p>
+        <div class="service">
+            <h3><a href="menu.html">Dine In</a></h3>
+        </div>
+
+        <div class="takeout">
+            <h3><a href="contact.html">Take Out</a></h3>
+        </div>
+
+        <div class="delivery">
+            <h3><a href="contact.html">Delivery</a></h3>
+        </div>
+        <img
+        id="table"
+        src="assets/images/table-in-restaurant.jpg"
+        alt="table-image"
+    >
     </main>
 </body>
 </html>
