--- a/about.html
+++ b/about.html
@@ -5,13 +5,43 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <!-- Remember to link to your CSS file! -->
+    <link rel="stylesheet" href="assets/css/style.css" type="text/css">
 </head>
 <body>
     <!-- ABOUT PAGE -->
     <!-- TODO: Navbar here -->
+    <div>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="contact.html">Contact Us</a></li>
+                <li><a href="menu.html">Menu</a></li>
+            </ul>
+        </nav>
+    </div>
     <!-- TODO: Banner Image here-->
+    <img
+    id="banner"
+    src="assets/images/banner.png"
+    alt="banner-image"
+>
     <main>
         <!-- About page code here -->
+       <h1>About Us</h1>
+       <h2>Locations</h2>
+            <ul>
+                <li>Atlanta, Georgia</li>
+                <li>Brooklyn, New York</li>
+                <li>New York City, New York</li>
+                <li>Bangkok, Thailand</li>
+            </ul>
+       <h2>Origin Story</h2>
+            <img 
+                id="about"
+                src="assets/images/about.jpg" 
+                alt="about-image">
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Officia, et?</p>
     </main>
 </body>
 </html>
