--- a/menu.html
+++ b/menu.html
@@ -5,54 +5,184 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <!-- Remember to link to your CSS file! -->
+    <link rel="stylesheet" href="assets/css/style.css" type="text/css">
 </head>
 <body>
     <!-- MENU PAGE -->
     <!-- TODO: Navbar here -->
+    <div>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="contact.html">Contact Us</a></li>
+                <li><a href="menu.html">Menu</a></li>
+            </ul>
+        </nav>
+    </div>
     <!-- TODO: Banner Image here-->
+    <img
+    id="banner"
+    src="assets/images/banner.png"
+    alt="banner-image"
+>
     <main>
         <!-- Your job is to make the menu items in each section below a proper table! -->
-        Appetizers
+        <h1>
+            Appetizers
+        </h1>
+        <table>
+            <thead>
+                <tr>
+                    <th>Name</th>
+                    <th>Price</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <th>Chicken Satay</th>
+                    <th>$7.95</th>
+                </tr>
+                <tr>
+                    <th>Fresh Rolls</th>
+                    <th>$6.95</th>
+                </tr>
+            </tbody>
+        </table>
 
-        Name Price
-        Chicken Satay $7.95
-        Fresh Rolls $6.95
+        <h1>
+            Lunch
+        </h1>
+        <table>
+            <thead>
+                <tr>
+                    <th>Name</th>
+                    <th>Price</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <th>Panang Curry</th>
+                    <th>$9.95</th>
+                </tr>
+                <tr>
+                    <th>Red Curry</th>
+                    <th>$9.95</th>
+                </tr>
+                <tr>
+                    <th>Yellow Curry</th>
+                    <th>$8.95</th>
+                </tr> 
+                <tr>
+                    <th>Tom Ka Soup </th>
+                    <th>$8.95</th>
+                </tr>
+                <tr>
+                    <th>Tom Yum Soup </th>
+                    <th>$8.95</th>
+                </tr>
+            </tbody>
+        </table>
+
+        <h1>
+            Dinner
+        </h1>
+        <table>
+            <thead>
+                <tr>
+                    <th>Name</th>
+                    <th>Price</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <th>Pad Thai</th>
+                    <th>$10.95</th>
+                </tr>
+                <tr>
+                    <th>Pad See Ew</th>
+                    <th>$10.49</th>
+                </tr>
+                <tr>
+                    <th>Rad Nah</th>
+                    <th>$10.49</th>
+                </tr> 
+            </tbody>
+        </table>
         
-        Lunch
+        <h1>
+            Desserts
+        </h1>
+        <table>
+            <thead>
+                <tr>
+                    <th>Name</th>
+                    <th>Price</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <th>Black Sticky Rice Pudding</th>
+                    <th>$3.99</th>
+                </tr>
+                <tr>
+                    <th>Mango Sticky Rice</th>
+                    <th>$5.99</th>
+                </tr>
+            </tbody>
+        </table>
 
-        Name Price
-        Panang Curry $9.95
-        Red Curry $9.95
-        Yellow Curry $8.95
-        Tom Ka Soup $8.95
-        Tom Yum Soup $8.95
+        <h1>
+            Beverages
+        </h1>
+        <table>
+            <thead>
+                <tr>
+                    <th>Name</th>
+                    <th>Price</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <th>Thai Iced Coffee</th>
+                    <th>$3.49</th>
+                </tr>
+                <tr>
+                    <th>Thai Iced Tea</th>
+                    <th>$3.49</th>
+                </tr>
+                <tr>
+                    <th>Unsweetened Iced Tea</th>
+                    <th>$2.49</th>
+                </tr> 
+            </tbody>
+        </table>
 
-        Dinner
-
-        Name Price
-        Pad Thai $10.95
-        Pad See Ew $10.49
-        Rad Nah $10.49
-
-        Dessert
-
-        Name Price
-        Black Sticky Rice Pudding $3.99
-        Mango Sticky Rice $5.99
-
-        Beverages
-
-        Name Price
-        Thai Iced Coffee $3.49
-        Thai Iced Tea $3.49
-        Unsweetened Iced Tea $2.49
-
-        Side Orders
-        
-        Name Price
-        Jasmine rice $1.99
-        Brown rice $2.49
-        Cucumber Salad $2.99        
+        <h1>
+            Side Orders
+        </h1>
+        <table>
+            <thead>
+                <tr>
+                    <th>Name</th>
+                    <th>Price</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <th>Jasmine rice</th>
+                    <th>$1.99</th>
+                </tr>
+                <tr>
+                    <th>Brown rice</th>
+                    <th>$2.49</th>
+                </tr>
+                <tr>
+                    <th>Cucumber Salad</th>
+                    <th>$2.99</th>
+                </tr> 
+            </tbody>
+        </table>     
     </main>
 </body>
 </html>
